--- a/css/signup.css
+++ b/css/signup.css
@@ -1,3 +1,4 @@
+
 .header {
     display: flex;
     flex-direction: row;
@@ -113,7 +114,6 @@
 
 }
 
-
 .inputName {
     background-image: url(/img/register/person.svg);
     background-repeat: no-repeat;
@@ -160,13 +160,11 @@
 .policyTypo {
     color: #29ABE2;
     cursor: pointer;
-
 }
 
 .policyTypo:hover {
     text-decoration: underline;
     font-weight: 500;
-
 }
 
 .signupButtonDiv {
@@ -201,14 +199,11 @@
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
 }
 
-
-
 .policies {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-
     margin-top: 0px;
     margin-left: 50%;
     margin-bottom: 50px;
@@ -269,7 +264,6 @@
 
 }
 
-
 @media (max-width: 1200px) {
     .signupSection {
         margin-top: 400px;
@@ -277,54 +271,49 @@
     }
 }
 
-
-
-@media (max-width: 1000px) {
-    .signupSection {
-        margin-top: 515px;
-
-    }
-}
-
-
-@media (max-width: 600px) {
-    .signupSection {
-        width: 396px;
-        height: 595px;
-
-        margin-top: 520px;
-        padding: 32px 16px 32px 16px;
-
-
-    }
-
-
-.input {
-    width: 100%;
-    height: 50px;
-    gap: 8px;
-}
-
-.inputFields {
-    width: 100%;
-    height: 296px;
-    gap: 24px;
+@media (max-width: 620px) {
+    body {
+        width: fit-content;
+       
     
-}
+    }
+    .logoLogin {
+        height: 78px;
+        width: 64px;
+        margin-top: 37px;
+        margin-left: 38px;
+    }
+    .signupSection {
+        width: 90%;
+        height: 595px;
+        margin-top: 350px;
+        padding: 32px 16px 32px 16px;
+    }
 
-.form {
-    padding:32px 0px 48px 0px;
-}
+    .input {
+        width: 100%;
+        
+        gap: 8px;
+    }
 
-.accept {
-    margin-top: 20px;
-    padding-left: 0px;
-}
+    .inputFields {
+        width: 100%;
+        height: 296px;
+        gap: 24px;
 
+    }
+
+    .form {
+        padding: 32px 0px 48px 0px;
+    }
+
+    .accept {
+        margin-top: 20px;
+        padding-left: 0px;
+    }
 
     .policies {
-
-        width: 279px;
+        width: 100%;
         height: 35px;
         margin-top: 0px;
         gap: 24px;
@@ -333,34 +322,36 @@
     }
 
     .arrow {
-        top: 50px;
-        left: 40px;
+        top: 60px;
+        left: 16px;
     }
 
     .headlineSectionDiv {
         padding-top: 0px;
     }
 
-    .headlineSignup {
-        width: 315px;
-        height: 73px;
-        font-size: 47px;
-        font-weight: 700;
-        line-height: 73px;
-        letter-spacing: 0em;
-        text-align: center;
-        color: black;
+    .headlineSection {
+        gap: 5px;
+
     }
 
-    .buttonSignup { 
+    .headlineSignup {
+        font-size: 47px;
+
+      
+    }
+
+    .buttonSignup {
         width: 180px;
-    height: 51px;
-    padding: 4px 0px 4px 0px;
-    font-size: 16px;
-    line-height: 19.2px;
+        height: 51px;
+        padding: 4px 0px 4px 0px;
+        font-size: 16px;
+        line-height: 19.2px;
     }
 
     .signupButtonDiv {
         margin-top: 20px;
     }
+
 }
+
