--- a/css/login.css
+++ b/css/login.css
@@ -1,6 +1,3 @@
-body {
-    height: 100vh !important;
-}
 .header {
     display: flex;
     flex-direction: row;
@@ -63,14 +60,20 @@ body {
 .loginSection {
     width: 652px;
     height: 493px;
-    margin-top: 30%;
-    margin-left: 50%;
-    transform: translate(-50%, -50%);
+
     padding: 48px 115px 48px 115px;
     border-radius: 30px;
     gap: 32px;
     background: #FFFFFF;
     box-shadow: 0px 0px 14px 3px #0000000A;
+}
+
+.loginSectionDiv {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 149px;
+    margin-bottom: 190px;
 }
 
 .headlineSection {
@@ -232,7 +235,7 @@ body {
     justify-content: center;
     margin-top: 0px;
     margin-left: 50%;
-    margin-bottom: 50px;
+    margin-bottom: 99px;
     transform: translate(-50%, -50%);
     gap: 20px;
     font-size: 16px;
@@ -307,6 +310,9 @@ body {
     overflow-x: hidden;
 }
 
+
+
+
 @keyframes logo-animation {
     from {
         top: 50%;
@@ -337,19 +343,14 @@ body {
     }
 }
 
-@media (max-width: 1200px) {
-
-    .loginSection {
-        margin-top: 400px;
-
-    }
-}
+@media (max-width: 1200px) {}
 
 
 @media (max-width: 1000px) {
-    .loginSection {
-        margin-top: 515px;
 
+    .loginSectionDiv {
+        margin-top: 265.5px;
+        margin-bottom: 148.5px;
     }
 
     .header {
@@ -357,13 +358,13 @@ body {
     }
 
     .headerResponsive {
+        margin-top: 57.5px;
+        margin-bottom: 42px;
         display: flex;
         flex-direction: row;
         justify-content: center;
         align-items: center;
-        margin-left: 50%;
-        transform: translate(-50%, -50%);
-        width: 100%;
+
     }
 
     .registerSection {
@@ -376,6 +377,7 @@ body {
         justify-content: center;
         margin-top: 0px;
         margin-right: 0%;
+    
     }
 
 }
@@ -419,6 +421,12 @@ body {
         width: fit-content;
 
     }
+
+    .loginSectionDiv {
+        margin-top: 205.5px;
+        margin-bottom: 57.5px;
+    }
+
 
     .logoStartscreen {
         display: none;
@@ -476,7 +484,6 @@ body {
     .loginSection {
         width: 90%;
         height: 515px;
-        margin-top: 460px;
         padding: 32px 16px 32px 16px;
     }
 
