--- a/css/signup.css
+++ b/css/signup.css
@@ -1,4 +1,3 @@
-
 .header {
     display: flex;
     flex-direction: row;
@@ -17,12 +16,18 @@
     padding: 32px 88px 48px 88px;
 }
 
+.signupSectionDiv {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 0px;
+    margin-bottom: 122px;
+}
+
 .signupSection {
     width: 598px;
     height: 630px;
-    margin-left: 50%;
-    transform: translate(-50%, -50%);
-    margin-top: 30%;
+
     border-radius: 30px;
     gap: 32px;
     background: #FFFFFF;
@@ -206,7 +211,7 @@
     justify-content: center;
     margin-top: 0px;
     margin-left: 50%;
-    margin-bottom: 50px;
+    margin-bottom: 99px;
     transform: translate(-50%, -50%);
     gap: 20px;
     font-size: 16px;
@@ -239,14 +244,9 @@
 .successButtonShow {
     width: 312px;
     height: 74px;
-    position: absolute;
-    right: 10%;
-    top: 67px;
     border: none;
     box-shadow: 0px 0px 4px 0px #0000001A;
     color: white;
-    animation-delay: 800ms;
-    animation-duration: 0ms;
     background-color: #2A3647;
     border-radius: 10px;
     font-size: 20px;
@@ -257,16 +257,37 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    transform: translateY(0);
+ 
+}
+
+.successBackground {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    background-color: rgba(0, 0, 0, 0.2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.successBackgroundHide {
+    display: none;
 }
 
 .successButtonHide {
-    display: none;
-
+    transform: translateY(100%);
+    transition: transform 2s ease-in;
+ 
 }
 
+
 @media (max-width: 1200px) {
-    .signupSection {
-        margin-top: 400px;
+    .signupSectionDiv {
+        margin-top: 63.5px;
 
     }
 }
@@ -274,25 +295,31 @@
 @media (max-width: 620px) {
     body {
         width: fit-content;
-       
-    
+
+
     }
+
+    .signupSectionDiv {
+        margin-top: 50.47px;
+        margin-bottom: 108.5px;
+    }
+
     .logoLogin {
         height: 78px;
         width: 64px;
         margin-top: 37px;
         margin-left: 38px;
     }
+
     .signupSection {
         width: 90%;
         height: 595px;
-        margin-top: 350px;
         padding: 32px 16px 32px 16px;
     }
 
     .input {
         width: 100%;
-        
+
         gap: 8px;
     }
 
@@ -338,7 +365,7 @@
     .headlineSignup {
         font-size: 47px;
 
-      
+
     }
 
     .buttonSignup {
@@ -354,4 +381,3 @@
     }
 
 }
-
