--- a/css/addtask.css
+++ b/css/addtask.css
@@ -106,7 +106,7 @@
     color: #2A3647 !important;
     background-image: url(/img/addtask/arrow_drop_downaa.svg);
     background-repeat: no-repeat;
-    background-position: 390px;
+    background-position: 95%;
     background-size: 24px 24px;
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -119,7 +119,7 @@
     padding: 12px 16px 12px 16px;
     background-image: url(/img/addtask/event.svg);
     background-repeat: no-repeat;
-    background-position: 390px;
+    background-position: 95%;
     background-size: 24px 24px;
 }
 .inputDate::-webkit-calendar-picker-indicator {
@@ -147,7 +147,7 @@
     flex-direction: row;
     background-image: url(/img/addtask/Subtasks\ icons11.svg);
     background-repeat: no-repeat;
-    background-position: 390px;
+    background-position: 95%;
     background-size: 24px 24px;
 }
 
@@ -344,3 +344,36 @@
 
 }
 
+.mainSectionResponsive {
+    display: none;
+}
+
+@media (max-width: 1500px) {
+
+   
+.mainSection {
+    display: none;
+    
+}
+
+.mainSectionResponsive {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    margin-top: 32px;
+    width: 100%;
+}
+
+.lowerSection {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+
+}
+}
+
+@media (max-width: 940px) {
+
+    
+}
