--- a/css/signup.css
+++ b/css/signup.css
@@ -111,8 +111,14 @@
     color: black;
     margin-bottom: 32px;
     cursor: pointer;
+    writing-mode: horizontal-tb !important;
 
 }
+
+.input:focus{
+    border: 1px solid #29ABE2 !important;
+}
+
 
 ::placeholder {
     color: #D1D1D1;
@@ -241,7 +247,54 @@
     font-weight: 700;
 }
 
+.successButtonHide {
+   display: none;
+   
+
+}
+
+.successBackgroundShow {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    background-color: rgba(168, 168, 168, 0.1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    animation-name: background-animation;
+    animation-fill-mode: inherit;
+    animation-timing-function: ease-in-out;
+    animation-duration: 1s;
+  
+    
+}
+
+.successBackgroundHide {
+    display: none;
+}
+.successButtonDiv {
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    animation-name: logo-animation;
+    animation-fill-mode: inherit;
+    animation-timing-function: ease-in-out;
+    animation-duration: 1s;
+  
+
+}
+
 .successButtonShow {
+    display: flex;
+
+ 
+
     width: 312px;
     height: 74px;
     border: none;
@@ -257,32 +310,30 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    transform: translateY(0);
- 
-}
-
-.successBackground {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    background-color: rgba(0, 0, 0, 0.2);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    
     
 }
 
-.successBackgroundHide {
-    display: none;
+@keyframes logo-animation {
+    from {
+        margin-bottom: -200%;
+    }
+
+    to {
+     margin-bottom: 0%;
+    }
 }
 
-.successButtonHide {
-    transform: translateY(100%);
-    transition: transform 2s ease-in;
- 
+@keyframes background-animation {
+    from {
+        opacity: 0;
+    }
+
+    to {
+     opacity: 1;
+    }
 }
+
 
 
 @media (max-width: 1200px) {
@@ -319,15 +370,15 @@
 
     .input {
         width: 100%;
-
         gap: 8px;
     }
+
+    
 
     .inputFields {
         width: 100%;
         height: 296px;
         gap: 24px;
-
     }
 
     .form {
