--- a/css/login.css
+++ b/css/login.css
@@ -127,9 +127,6 @@
     cursor: pointer;
 }
 
-.input:focus{
-    border: 1px solid #29ABE2 !important;
-}
 
 
 ::placeholder {
@@ -283,6 +280,15 @@
     overflow-x: hidden;
 }
 
+.messagebox {
+    color: red;
+    font-size: 10px;
+    font-weight: 400;
+    margin-top: 5px;
+    margin-bottom: 15px;
+
+}
+
 
 
 @media (max-width: 1000px) {
@@ -347,6 +353,7 @@
 
     .inputPassword {
         background-position: 95%;
+        margin-bottom: 0px !important;
     }
 
     .loginButtons {
