--- a/css/startpage.css
+++ b/css/startpage.css
@@ -122,7 +122,7 @@
     letter-spacing: 0em;
     text-align: left;
     color: black;
-    margin-bottom: 32px;
+    margin-bottom: 0px;
     cursor: pointer;
 }
 
@@ -315,7 +315,15 @@
     overflow-x: hidden;
 }
 
-
+.messagebox {
+    color: red;
+    font-size: 10px;
+    font-weight: 400;
+    margin-top: 5px;
+    margin-bottom: 17px;
+    height: 10px;
+   margin-left: 5px;
+}
 
 
 @keyframes logo-animation {
