--- a/css/signup.css
+++ b/css/signup.css
@@ -12,8 +12,11 @@
     margin-left: 77px
 }
 
+
 .form {
     padding: 32px 88px 48px 88px;
+    
+
 }
 
 .signupSectionDiv {
@@ -109,16 +112,10 @@
     letter-spacing: 0em;
     text-align: left;
     color: black;
-    margin-bottom: 32px;
+    margin-bottom: 0px;
     cursor: pointer;
-    writing-mode: horizontal-tb !important;
-
+    
 }
-
-.input:focus{
-    border: 1px solid #29ABE2 !important;
-}
-
 
 ::placeholder {
     color: #D1D1D1;
@@ -302,6 +299,20 @@
     align-items: center;
     justify-content: center;
    
+}
+
+.messagebox {
+    color: red;
+    font-size: 10px;
+    font-weight: 400;
+    margin-top: 5px;
+    margin-bottom: 17px;
+    display: block;
+    z-index: 100;
+    width: 100%;
+    height: 10px;
+    padding-left: 5px;
+
 }
 
 @keyframes logo-animation {
