--- a/css/templates.css
+++ b/css/templates.css
@@ -59,6 +59,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 1;
 }
 
 .headerLogo img {
@@ -231,6 +232,7 @@ nav {
     align-items: center;
     padding: 2px 16px;
     display: none;
+    z-index: 999;
 }
 
 .smallNavElement {
@@ -254,6 +256,7 @@ nav {
     font-family: 'open sans';
     line-height: 16.8px;
     font-size: 14px;
+    text-align: center;
 }
 
 .smallNavLinkActive {
