--- a/css/templates.css
+++ b/css/templates.css
@@ -106,6 +106,8 @@ header {
     align-items: center;
     justify-content: center;
     color: var(--secondarycolor);
+    height: 56px;
+    width: 56px;
 }
 
 .activeUser:hover {
