--- a/css/signup.css
+++ b/css/signup.css
@@ -117,6 +117,14 @@
     
 }
 
+.input:focus{
+    outline: 1px solid var(--secondarycolor);
+ }
+
+ .inputEmpty{
+    outline: 1px solid red;
+ }
+
 ::placeholder {
     color: #D1D1D1;
 
@@ -143,9 +151,12 @@
     background-size: 24px 24px;
 }
 
+.inputPassword:focus {
+    background-image: url(/img/login/visibility_off.svg);
+}
+
 .accept {
     height: 24px;
-    padding-left: 39px;
     gap: 8px;
     font-size: 16px;
     font-weight: 400;
@@ -312,7 +323,24 @@
     width: 100%;
     height: 10px;
     padding-left: 5px;
+}
 
+.messageboxSmall {
+    color: red;
+    font-size: 10px;
+    font-weight: 400;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    
+    z-index: 100;
+   
+    height: 10px;
+}
+
+.messageboxDiv {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 @keyframes logo-animation {
