--- a/css/startpage.css
+++ b/css/startpage.css
@@ -126,9 +126,15 @@
     cursor: pointer;
 }
 
-.input:focus{
-    border: 1px solid #29ABE2 !important;
-}
+
+input:focus{
+    outline: 1px solid var(--secondarycolor);
+ }
+
+ .inputEmpty{
+    outline: 1px solid red;
+ }
+ 
 
 
 ::placeholder {
@@ -147,6 +153,10 @@
     background-repeat: no-repeat;
     background-position: 95%;
     background-size: 24px 24px;
+}
+
+.inputPassword:focus {
+    background-image: url(/img/login/visibility_off.svg);
 }
 
 .remember {
