--- a/css/addtask.css
+++ b/css/addtask.css
@@ -89,6 +89,26 @@ main {
 }
 
 
+.inputField:focus{
+    outline: 1px solid var(--secondarycolor);
+ }
+
+ .inputEmpty{
+    outline: 1px solid red;
+ }
+
+ .messagebox {
+    color: red;
+    font-size: 10px;
+    font-weight: 400;
+    margin-top: 5px;
+    margin-bottom: 17px;
+    display: block;
+    z-index: 100;
+    width: 100%;
+    height: 10px;
+    padding-left: 5px;
+}
 
 ::placeholder {
     color: #D1D1D1;
