--- a/css/addtask.css
+++ b/css/addtask.css
@@ -58,8 +58,59 @@ main {
     height: 168px;
 }
 
-.assigned {
-    height: 80px;
+.dropDownAssignedOpened{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    bottom: 56px;
+    width: 440px;
+    z-index: 2;
+    padding-top: 0 !important;
+}
+
+.searchContactField{
+    border: 1px solid var(--secondarycolor);
+}
+
+.contactsDropDownMenu{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-height: 288px;
+    overflow-y: auto;
+}
+
+.dropDownContact{
+    padding: 12px 16px;
+    width: 100%;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.dropDownContact:hover {
+    background-color: #F9F9F9;
+}
+
+.contactProfileBadge {
+    font-size: 12px;
+    border-radius: 50%;
+    border: 2px solid white;
+    padding: 12px;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 42px;
+    height: 42px;
+    background-color: red;
+}
+
+.contactDetails{
+    display: flex;
+    align-items: center;
+    gap: 16px;
 }
 
 .inputBox {
@@ -89,15 +140,15 @@ main {
 }
 
 
-.inputField:focus{
+.inputField:focus {
     outline: 1px solid var(--secondarycolor);
- }
+}
 
- .inputEmpty{
+.inputEmpty {
     outline: 1px solid red;
- }
+}
 
- .messagebox {
+.messagebox {
     color: red;
     font-size: 10px;
     font-weight: 400;
@@ -132,13 +183,15 @@ main {
     height: 48px;
     padding: 10px 16px 10px 16px;
     color: #2A3647 !important;
-    background-image: url(/img/addtask/arrow_drop_downaa.svg);
     background-repeat: no-repeat;
     background-position: 95%;
     background-size: 24px 24px;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
+    display: flex;
+    justify-content: space-between;
+    z-index: 2;
 }
 
 .inputDate {
@@ -283,12 +336,38 @@ main {
 }
 
 .category {
-    height: 80px;
-    margin-bottom: 32px;
-    background-image: url(/img/addtask/arrow_drop_downaa.svg);
-    background-repeat: no-repeat;
-    background-position: 390px;
-    background-size: 24px 24px;
+    position: relative;
+}
+
+.dropDownMenuArrow {
+    border-radius: 50px;
+}
+
+.dropDownMenuArrow:hover {
+    background-color: #F9F9F9;
+}
+
+.dropDownCategoryOpened {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 31px;
+    width: 440px;
+    z-index: 1;
+}
+
+.dropDownOption {
+    padding: 12px 16px;
+    width: 100%;
+    border-radius: 10px;
+}
+
+.dropDownOption:hover {
+    background-color: #F9F9F9;
+}
+
+.rotated {
+    transform: rotate(180deg);
 }
 
 .subtask {
@@ -405,6 +484,8 @@ main {
 
     .inputBox {
         margin-right: 24px;
+        z-index: -3;
+        position: relative;
     }
 
     .lowerSection {
