--- a/css/addtask.css
+++ b/css/addtask.css
@@ -140,6 +140,9 @@ main {
 }
 
 
+ 
+
+
 .inputField:focus {
     outline: 1px solid var(--secondarycolor);
 }
@@ -198,31 +201,18 @@ main {
     color: #D1D1D1 !important;
     height: 48px;
     padding: 12px 16px 12px 16px;
-    background-image: url(/img/addtask/event.svg);
+    z-index: 100;
+    background-color: white;
+ }
+ 
+ 
+ input[type="date"]::-webkit-calendar-picker-indicator {
+    background: url(/img/addtask/event.svg);
     background-repeat: no-repeat;
     background-position: 95%;
     background-size: 24px 24px;
-}
+ }
 
-.inputDate::-webkit-calendar-picker-indicator {
-    display: none;
-    /* Versteckt das Standard-Kalender-Symbol für Chrome */
-}
-
-.inputDate::-webkit-inner-spin-button {
-    display: none;
-    /* Versteckt die Spin-Buttons für Chrome */
-}
-
-.inputDate::-webkit-clear-button {
-    display: none;
-    /* Versteckt die Clear-Button für Chrome */
-}
-
-.inputDate::-moz-calendar-picker-indicator {
-    display: none;
-    /* Versteckt das Standard-Kalender-Symbol für Firefox */
-}
 
 
 .inputSubtask {
