--- a/css/board.css
+++ b/css/board.css
@@ -243,6 +243,19 @@
     margin-bottom: 24px;
     margin-top: 12px;
 }
+.hidden{
+    display: none;
+}
+.dragCard{
+    width: 100%;
+    border-radius: 10px;
+    width: 252px;
+    background-color: transparent;
+    border: 1px dashed #A8A8A8;
+    box-shadow: 0 0 4px 0 rgb(0 0 0 0.16);
+    border-radius: 24px;
+}
+
 
 /*CardDetail*/
 #cardContainerBackground{
