--- a/css/addtask.css
+++ b/css/addtask.css
@@ -27,7 +27,7 @@ main {
     justify-content: flex-start;
     width: 440px;
     height: 376px;
-
+    gap: 32px;
 }
 
 .sectionRight {
@@ -35,9 +35,6 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    width: 440px;
-    height: 416px;
-
 }
 
 .lowerSection {
@@ -120,7 +117,6 @@ main {
     gap: 8px;
     display: flex;
     flex-direction: column;
-    margin-bottom: 32px;
 }
 
 .inputField {
@@ -160,6 +156,11 @@ main {
     width: 100%;
     height: 10px;
     padding-left: 5px;
+}
+
+.messageboxCategory {
+    margin-bottom: 6px;
+    margin-top: 0;
 }
 
 ::placeholder {
@@ -263,8 +264,7 @@ main {
     flex-direction: column;
     align-items: flex-start;
     gap: 8px;
-    margin-bottom: 32px;
-
+    margin-bottom: 24px;
 }
 
 .prio {
@@ -459,13 +459,6 @@ main {
 }
 
 @media (max-width: 1400px) {
-
-
-    .mainSection {
-        display: none;
-
-    }
-
     .mainSectionResponsive {
         display: flex;
         flex-direction: column;
