--- a/css/addtask.css
+++ b/css/addtask.css
@@ -55,7 +55,7 @@ main {
     height: 168px;
 }
 
-.dropDownAssignedOpened{
+.dropDownAssignedOpened {
     display: flex;
     flex-direction: column;
     position: absolute;
@@ -65,13 +65,13 @@ main {
     padding-top: 0 !important;
 }
 
-.searchContactField{
+.searchContactField {
     border: 1px solid var(--secondarycolor);
     display: flex;
 }
 
 
-.contactsDropDownMenu{
+.contactsDropDownMenu {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -79,7 +79,7 @@ main {
     overflow-y: auto;
 }
 
-.dropDownContact{
+.dropDownContact {
     padding: 12px 16px;
     width: 100%;
     border-radius: 10px;
@@ -106,10 +106,15 @@ main {
     background-color: red;
 }
 
-.contactDetails{
+.contactDetails {
     display: flex;
     align-items: center;
     gap: 16px;
+}
+
+.contactSelected{
+    background-color: #2A3647 !important;
+    color: white;
 }
 
 .inputBox {
@@ -204,15 +209,15 @@ main {
     padding: 12px 16px 12px 16px;
     z-index: 100;
     background-color: white;
- }
- 
- 
- input[type="date"]::-webkit-calendar-picker-indicator {
+}
+
+
+input[type="date"]::-webkit-calendar-picker-indicator {
     background: url(/img/addtask/event.svg);
     background-repeat: no-repeat;
     background-position: 95%;
     background-size: 24px 24px;
- }
+}
 
 
 
@@ -498,7 +503,7 @@ main {
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
-gap:0px;
+        gap: 0px;
         position: fixed;
         bottom: 76px;
         left: 0px;
