--- a/css/addtask.css
+++ b/css/addtask.css
@@ -190,9 +190,6 @@ main {
     height: 48px;
     padding: 10px 16px 10px 16px;
     color: #2A3647 !important;
-    background-repeat: no-repeat;
-    background-position: 95%;
-    background-size: 24px 24px;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
@@ -201,13 +198,18 @@ main {
     z-index: 2;
 }
 
+.inputCategory {
+    height: 48px;
+    padding: 10px 16px 10px 16px;
+    color: #2A3647 !important;
+}
+
 
 
 .inputDate {
     color: #D1D1D1 !important;
     height: 48px;
     padding: 12px 16px 12px 16px;
-    z-index: 100;
     background-color: white;
 }
 
@@ -233,7 +235,41 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     background-size: 24px 24px;
 }
 
+.subTaskList{
+    list-style-position: inside;
+}
 
+.subTaskList li{
+    margin-bottom: 8px;
+    cursor: pointer;
+    padding: 4px 16px 4px 32px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.subTasksImgContainer{
+    display: none;
+    align-items: center;
+    gap: 4px;
+}
+
+.subTaskList li:hover{
+    background-color: #D1D1D1;
+}
+
+.subTaskList li:hover .subTasksImgContainer{
+    display: flex;
+}
+
+
+
+.subTaskVerticalLine{
+    height: 24px;
+    width: 1px;
+    background-color: #A8A8A8;
+}
 
 .typo {
     font-size: 20px;
@@ -270,10 +306,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     align-items: flex-start;
     gap: 8px;
     margin-bottom: 24px;
-}
-
-.prio {
-    height: 88px;
 }
 
 .prioButton {
@@ -326,7 +358,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
     width: 440px;
 }
 
@@ -371,6 +402,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .subtask {
     height: 80px;
+    display: flex;
 }
 
 .buttonClear {
@@ -459,44 +491,70 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 }
 
-.mainSectionResponsive {
-    display: none;
-}
-
 @media (max-width: 1400px) {
-    .mainSectionResponsive {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: center;
-        margin-top: 32px;
-        width: 100%;
-
-    }
-
-    .inputBox {
-        margin-right: 24px;
-        z-index: -3;
-        position: relative;
-    }
-
     .lowerSection {
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 20px;
-
         margin-top: 46px;
     }
-}
 
-@media (max-width: 500px) {
-    .mainSectionResponsive {
-        margin-top: 112px;
-        margin-bottom: 100px;
+    .mainSection {
+        flex-direction: column;
     }
 
+    .border {
+        display: none;
+    }
+
+    form {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .prioBox {
+        order: -1;
+        position: relative;
+        bottom: 112px;
+
+    }
+
+    .date {
+        position: relative;
+        bottom: 112px;
+    }
+
+    .category{
+        bottom: 112px;
+    }
+
+    .assigned{
+        position: relative;
+        top: 336px;
+    }
+
+    .inputAssigned{
+        z-index: 1;
+    }
+}
+
+@media (max-width: 940px){
+    main h1 {
+        padding: 48px 0 8px 0px;
+    }
+    main {
+        padding-left: 16px;
+        padding-right: 16px; 
+    }
+}
+
+@media (max-width: 555px) {
     .buttonClear {
         display: none;
+    }
+    
+    .buttonsRight{
+        width: auto;
+    }
+    .lowerSection {
+        z-index: 999;
     }
 
     .lowerSection {
@@ -513,6 +571,9 @@ input[type="date"]::-webkit-calendar-picker-indicator {
         height: 88px;
         margin: 0px 0px 0px 0px;
     }
+}
+
+@media (max-width: 500px) {
 
     .buttonsRight {
         width: fit-content;
@@ -523,12 +584,15 @@ input[type="date"]::-webkit-calendar-picker-indicator {
         position: fixed !important;
         top: 80px;
         left: 0px;
-        padding-left: 24px;
+        padding-left: 16px;
         background-color: #F6F7F8;
         z-index: 1;
         width: 100%;
         height: 112px;
+    }
 
+    .mainSection {
+        padding-top: 91px;
     }
 
     header {
@@ -537,5 +601,40 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
     .typoSmall {
         font-size: 12px;
+    }
+
+    .inputBox {
+        width: 300px;
+    }
+}
+
+@media (max-width: 480px){
+    .inputField {
+        max-width: 300px;
+    }
+
+    .prioButtonBox {
+        flex-direction: column;
+        gap: 8px;
+        width: auto;
+    }
+
+    .prioButton {
+        width: 200px;
+    }
+}
+
+@media (max-width: 440px){
+    main h1 {
+        padding-left: 6px;
+    }
+}
+
+@media (max-width: 330px){
+    .inputField {
+        max-width: 295px;
+    }
+    .inputBox {
+        width: 295px;
     }
 }
