--- a/css/login.css
+++ b/css/login.css
@@ -128,10 +128,6 @@
     
 }
 
-input:focus{
-    outline: 1px solid var(--secondarycolor);
- }
-
  .inputEmpty{
     outline: 1px solid red;
  }
@@ -157,6 +153,38 @@ input:focus{
 
 .inputPassword:focus {
     background-image: url(/img/login/visibility_off.svg);
+}
+
+input[type=checkbox]{
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background: url('/img/login/unchecked.svg') 0 0 no-repeat;
+    background-size: contain;
+    height: 16px;
+    width: 16px;
+    padding: 0;
+    margin: 0;
+    border: none;
+    cursor: pointer;
+}
+input[type=checkbox]:hover {
+    background-color: #e5ebf2;
+}
+
+input[type=checkbox]:checked{
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background: url('/img/login/checked.svg') 0 0 no-repeat;
+    background-size: contain; 
+    height: 16px;
+    width: 16px;
+    padding: 0;
+    margin: 0;
+    border: none;
+    cursor: pointer;
+    z-index: 100;
 }
 
 .remember {
