--- a/css/signup.css
+++ b/css/signup.css
@@ -117,10 +117,6 @@
     
 }
 
-.input:focus{
-    outline: 1px solid var(--secondarycolor);
- }
-
  .inputEmpty{
     outline: 1px solid red;
  }
@@ -170,11 +166,38 @@
     margin-top: 165px;
 }
 
-.checkbox {
+input[type=checkbox]{
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background: url('/img/login/unchecked.svg') 0 0 no-repeat;
+    background-size: contain;
+    height: 16px;
+    width: 16px;
+    padding: 0;
+    margin: 0;
+    border: none;
     cursor: pointer;
 }
 
-.checkbox:hover {}
+input[type=checkbox]:hover {
+    background-color: #e5ebf2;
+}
+
+input[type=checkbox]:checked{
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background: url('/img/login/checked.svg') 0 0 no-repeat;
+    background-size: contain; 
+    height: 16px;
+    width: 16px;
+    padding: 0;
+    margin: 0;
+    border: none;
+    cursor: pointer;
+    z-index: 100;
+}
 
 .policyTypo {
     color: #29ABE2;
