--- a/css/startpage.css
+++ b/css/startpage.css
@@ -126,10 +126,38 @@
     cursor: pointer;
 }
 
+input[type=checkbox]{
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background: url('/img/login/unchecked.svg') 0 0 no-repeat;
+    background-size: contain;
+    height: 16px;
+    width: 16px;
+    padding: 0;
+    margin: 0;
+    border: none;
+    cursor: pointer;
+}
 
-input:focus{
-    outline: 1px solid var(--secondarycolor);
- }
+input[type=checkbox]:hover {
+    background-color: #e5ebf2;
+}
+
+input[type=checkbox]:checked{
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background: url('/img/login/checked.svg') 0 0 no-repeat;
+    background-size: contain; 
+    height: 16px;
+    width: 16px;
+    padding: 0;
+    margin: 0;
+    border: none;
+    cursor: pointer;
+    z-index: 100;
+}
 
  .inputEmpty{
     outline: 1px solid red;
