add the add-task function

--- a/css/board.css
+++ b/css/board.css
@@ -284,7 +284,7 @@ h1{
     background-color: white;
     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.16);
     border-radius: 30px;
-    width: 525px;
+    min-width: 525px;
     max-height: 90vh;
     overflow-y: auto;
     padding: 48px 40px 48px 40px;
@@ -380,9 +380,6 @@ h1{
 .taskFunctionsIcons {
     width: 18px;
 }
-
-
-
 
 
 @media (max-width: 940px) {
