--- a/css/board.css
+++ b/css/board.css
@@ -279,6 +279,7 @@ h1{
     display: none;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 #cardDetail{
     background-color: white;
@@ -288,12 +289,24 @@ h1{
     max-height: 90vh;
     overflow-y: auto;
     padding: 48px 40px 48px 40px;
-    display: flex;
+    display: none;
     flex-direction: column;
     row-gap: 24px;
     z-index: 11;
     -ms-overflow-style: none;
+    position: absolute;
+    animation: slideInFromRight 0.25s ease;
 }
+
+@keyframes slideInFromRight {
+    0% {
+      transform: translateX(100%);
+    }
+    100% {
+      transform: translateX(0);
+    }
+  }
+
 #cardDetail::-webkit-scrollbar {
     display: none;
   }
