--- a/css/board.css
+++ b/css/board.css
@@ -88,7 +88,7 @@ h1{
     height: 32px;
     padding-left: 16px;
     border: 0;
-    background-color: white;
+    background-color: transparent;
     border-left: 1px solid #D1D1D1;
     margin-right: 16px;
 }
