Updated Assigned to input field function

--- a/css/addtask.css
+++ b/css/addtask.css
@@ -65,6 +65,11 @@ main {
     padding-top: 0 !important;
 }
 
+.assignedContactsList{
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .searchContactField {
     border: 1px solid var(--secondarycolor);
     display: flex;
